# Canister.HexWar

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
research/: .gitignore  Makefile  README.md  coverage.json  pyproject.toml
research/hexwar/: __init__.py
research/hexwar/agents/: __init__.py  base_agent.py  greedy_agent.py  random_agent.py
research/hexwar/agents/evolutionary/: __init__.py  cmaes_train.py  (+1 more)
research/hexwar/engine/: __init__.py  board_generator.py  combat.py  game_engine.py  hex_utils.py  turn_resolver.py  types.py  unit_generator.py  win_condition.py
research/hexwar/evaluation/: __init__.py  elo.py  eval_agent.py  tournament.py
research/hexwar/training/: __init__.py  behavioural_cloning.py  league.py  ppo_train.py  ppo_trainer.py  reward.py  rollout_buffer.py  self_play.py  strategist_collect.py  strategist_train.py
research/scripts/: run_tournament.py  train_cmaes.py  train_ppo.py
research/tests/: test_agents.py  test_board_generator.py  test_combat.py  test_encoder.py  test_engine_parity.py  test_eval_agent.py  test_evaluation.py  test_fitness.py  test_game_engine.py  test_gnn_model.py  test_hex_utils.py  test_ppo_agent.py  test_reward.py  test_strategist_agent.py  test_strategist_model.py  test_turn_resolver.py  test_unit_generator.py  test_win_condition.py
research/tests/training/: test_bc.py  test_league.py  test_parallel_collect.py  test_ppo_trainer.py  test_rollout_buffer.py  test_self_play.py  test_strategist_trainer.py
(+80 files in other folders)
